--- a/akan-names/styles.css
+++ b/akan-names/styles.css
@@ -3,7 +3,19 @@ body{
 }
 .container-fluid{
     background-image: url("pic3.jpeg");
+    background-size: cover;
 }
 .overlay{
     background-color: rgba(black, black, black, 1);
 }
+.form{
+    text-align: center;
+    fon
+
+}
+h1{
+    font-family: 'Notable', sans-serif;
+    color:black;
+
+}
+
