--- a/akan-names/styles.css
+++ b/akan-names/styles.css
@@ -2,7 +2,7 @@ body{
     color: white;
 }
 .container-fluid{
-    background-image: url("pic3.jpeg");
+    background-image: url("image2.jpeg");
     background-size: cover;
 }
 .overlay{
